# emblaze

./: .eslintrc.js  .gitignore  .prettierrc  LICENSE.txt  MANIFEST.in  README.md  drviewer.json  emblaze.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setupbase.py  tsconfig.json  webpack.config.js
client/: package-lock.json  package.json  postcss.config.js  vite.config.ts
client/src/: App.svelte  StandaloneApp.svelte  colorschemes.ts  socketstores.ts  standalone.ts  stores.ts  widget-main.js
data/mnist-tsne/: data.json  thumbnails.json
data/mnist-umap/: metadata.json
data/mnist-umap-2/: thumbnails.json
docs/: index.html  index.js
docs/emblaze/: datasets.html  frame_colors.html  index.html  neighbors.html  recommender.html  thumbnails.html  utils.html  viewer.html
docs/templates/: config.mako  head.mako
drviewer/: __init__.py  _frontend.py  _version.py  datasets.py  frame_colors.py  moving_scatterplot.py  server.py  thumbnails.py  utils.py  viewer.py
drviewer/nbextension/: __init__.py
emblaze/: __init__.py  _frontend.py  _version.py  datasets.py  frame_colors.py  neighbors.py  recommender.py  server.py  thumbnails.py  utils.py  viewer.py
emblaze/nbextension/: __init__.py
emblaze/public/: index.html
emblaze/static/: style.css  widget-main.js
examples/: example.ipynb
src/: App.svelte  StandaloneApp.svelte  colorschemes.ts  extension.ts  index.ts  plugin.ts  stores.ts  version.ts  widget.ts
src/visualization/: D3Canvas.svelte  Legend.svelte  ScatterplotThumbnail.svelte  SpatialVisualization.svelte  dataset.js  (+10 more)
(+70 files in other folders)
